violating_resources/pod-security-policy/proc-mount/samples/psp-proc-mount/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-proc-mount-disallowed
  name: nginx-proc-mount-disallowed
  labels:
    app: nginx-proc-mount
spec:
  ephemeralContainers:
  - name: nginx
    image: nginx
    securityContext:
      procMount: Unmasked #Default
