violating_resources/pod-security-policy/proc-mount/samples/psp-proc-mount/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-proc-mount-disallowed
  name: psp-proc-mount-example-allowed
  labels:
    app: nginx-proc-mount
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      procMount: Default
